retroarch.cfg: Add keyboard hotkey (ctrl).

--- a/content/retrofe/retroarch/retroarch.cfg
+++ b/content/retrofe/retroarch/retroarch.cfg
@@ -57,13 +57,13 @@ cheat_database_path = "cheats"
 check_firmware_before_loading = "false"
 config_save_on_exit = "false"
 content_database_path = "database/rdb"
-content_favorites_path = "/media/usb0/content/retrofe/retroarch/content_favorites.lpl"
+content_favorites_path = "content_favorites.lpl"
 content_favorites_size = "200"
 content_history_dir = ""
-content_history_path = "/media/usb0/content/retrofe/retroarch/content_history.lpl"
+content_history_path = "content_history.lpl"
 content_history_size = "200"
-content_image_history_path = "/media/usb0/content/retrofe/retroarch/content_image_history.lpl"
-content_music_history_path = "/media/usb0/content/retrofe/retroarch/content_music_history.lpl"
+content_image_history_path = "content_image_history.lpl"
+content_music_history_path = "content_music_history.lpl"
 content_runtime_log = "true"
 content_runtime_log_aggregate = "false"
 content_show_add = "true"
@@ -75,7 +75,7 @@ content_show_netplay = "true"
 content_show_playlists = "true"
 content_show_settings = "true"
 content_show_settings_password = ""
-content_video_history_path = "/media/usb0/content/retrofe/retroarch/content_video_history.lpl"
+content_video_history_path = "content_video_history.lpl"
 core_assets_directory = "downloads"
 core_options_path = ""
 core_set_supports_no_game_enable = "true"
@@ -176,7 +176,7 @@ input_disk_prev_btn = "nul"
 input_disk_prev_mbtn = "nul"
 input_driver = "udev"
 input_duty_cycle = "3"
-input_enable_hotkey = "nul"
+input_enable_hotkey = "ctrl"
 input_enable_hotkey_axis = "nul"
 input_enable_hotkey_btn = "12"
 input_enable_hotkey_mbtn = "nul"
