--- a/content/retrofe/retroarch/retroarch.cfg
+++ b/content/retrofe/retroarch/retroarch.cfg
@@ -7,12 +7,12 @@ ai_service_source_lang = "0"
 ai_service_target_lang = "0"
 ai_service_url = "http://localhost:4404/"
 all_users_control_menu = "true"
-apply_cheats_after_load = "false"
-apply_cheats_after_toggle = "false"
+apply_cheats_after_load = "true"
+apply_cheats_after_toggle = "true"
 aspect_ratio_index = "22"
 assets_directory = "assets"
 audio_block_frames = "0"
-audio_device = ""
+audio_device = "hw:2,0"
 audio_driver = "alsathread"
 audio_dsp_plugin = ""
 audio_enable = "true"
@@ -23,7 +23,7 @@ audio_enable_menu_notice = "false"
 audio_enable_menu_ok = "false"
 audio_fastforward_mute = "false"
 audio_filter_dir = "default"
-audio_latency = "0"
+audio_latency = "128"
 audio_max_timing_skew = "0.050000"
 audio_mixer_mute_enable = "false"
 audio_mixer_volume = "0.000000"
@@ -109,7 +109,7 @@ frame_time_counter_reset_after_fastforwarding = "false"
 frame_time_counter_reset_after_load_state = "false"
 frame_time_counter_reset_after_save_state = "false"
 framecount_show = "false"
-frontend_log_level = "1"
+frontend_log_level = "0"
 game_specific_options = "true"
 gamma_correction = "0"
 global_core_options = "false"
@@ -178,11 +178,11 @@ input_driver = "udev"
 input_duty_cycle = "3"
 input_enable_hotkey = "ctrl"
 input_enable_hotkey_axis = "nul"
-input_enable_hotkey_btn = "12"
+input_enable_hotkey_btn = "5"
 input_enable_hotkey_mbtn = "nul"
 input_exit_emulator = "escape"
 input_exit_emulator_axis = "nul"
-input_exit_emulator_btn = "6"
+input_exit_emulator_btn = "4"
 input_exit_emulator_mbtn = "nul"
 input_fps_toggle = "f3"
 input_fps_toggle_axis = "nul"
@@ -208,7 +208,7 @@ input_hold_slowmotion = "e"
 input_hold_slowmotion_axis = "nul"
 input_hold_slowmotion_btn = "nul"
 input_hold_slowmotion_mbtn = "nul"
-input_joypad_driver = "udev"
+input_joypad_driver = "sdl2"
 input_keyboard_layout = ""
 input_libretro_device_p1 = "1"
 input_libretro_device_p10 = "1"
@@ -1389,7 +1389,7 @@ input_player1_left = "left"
 input_player1_left_axis = "nul"
 input_player1_left_btn = "nul"
 input_player1_left_mbtn = "nul"
-input_player1_mouse_index = "-1"
+input_player1_mouse_index = "2"
 input_player1_r = "w"
 input_player1_r2 = "nul"
 input_player1_r2_axis = "nul"
@@ -2909,7 +2909,7 @@ run_ahead_secondary_instance = "true"
 runtime_log_directory = "default"
 save_file_compression = "false"
 savefile_directory = "default"
-savefiles_in_content_dir = "false"
+savefiles_in_content_dir = "true"
 savestate_auto_index = "false"
 savestate_auto_load = "false"
 savestate_auto_save = "false"
