--- a/content/retrofe/retroarch/autoconfig/sdl2/Control deck.cfg
+++ b/content/retrofe/retroarch/autoconfig/sdl2/Control deck.cfg
@@ -31,9 +31,9 @@ input_right_btn_label = "DPad Right"
 input_a_btn_label = "B Button"
 input_x_btn_label = "Y Button"
 input_l_btn_label = "LB/L1"
-input_r_btn_label = "RB/R1"
+input_r_btn_label = "Z Button or RB/R1"
 input_l2_axis_label = "LT/L2"
-input_r2_axis_label = "RT/R2"
+input_r2_axis_label = "C Button or RT/R2"
 input_l3_btn_label = "Menu/Home"
 input_turbo_axis_label = "LT/L2"
 
